# hermes-apprentice

./: .commitlintrc.json  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.firecracker/: Dockerfile  README.md  bootstrap.sh  build-rootfs.sh  start-vm.sh  vm-config.json  vm-config.json.tmpl  vm.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: codeql.yml  commitlint.yml  coverage.yml  test.yml
burst/: go.mod  main.go
burst/cmd/: plan.go  root.go  run.go  version.go
dataset-builder/: Presidio.dockerfile  go.mod  main.go  scaffold_test.go
dataset-builder/cmd/: build.go  decompress.go  merge.go  root.go  version.go
deploy/docker/: Dockerfile.burst  Dockerfile.dataset-builder  Dockerfile.observer  Dockerfile.proxy  Dockerfile.registry  Dockerfile.serve  compose.monitoring.yml  docker-compose.yml
deploy/grafana/: prometheus.yml
detector/: go.mod  go.sum  main.go  pipeline_test.go
detector/cmd/: root.go  serve.go  version.go
docs/: SESSION_EXPORT.md  apprentice-refined-feasibility-2026-05-18-approved.md  apprentice-task-breakdown-2026-05-18-approved.md  benchmarks.md  migration-v0.1-to-v0.2.md  repo-rules.md  serving-plan.md
docs/assets/: .gitkeep
docs/wiki/: API-Reference.md  Architecture.md  Budget-&-Cost.md  Canary-&-Safety.md  Home.md  Known-Gaps-&-Roadmap.md  Monitoring.md  Multi-Provider-Upstream.md  Multi-Tenancy.md  Operations.md  Pattern-Merging.md  Pipeline.md  Quickstart.md  RunPod-&-Cloud.md  Setup-Guide.md
installer/: pyproject.toml
installer/src/apprentice_setup/: __init__.py  banner.py  cli.py  config.py  detect.py  plan.py
installer/tests/: test_installer.py
notes/: cron-tick-implementation.md  orchestrator.md  profiles-implementation.md  session-db-schema.md  skill-registration.md  skill_manage-actions.md  telegram-integration.md
notes/foundation-06/: SKILL.md  proof.md
notes/foundation-07/: foundation-07-ping.sh  proof.md
observer/: go.mod  main.go
observer/cmd/: root.go  serve.go  version.go
orchestrator/: pyproject.toml
orchestrator/src/apprentice_orchestrator/: __init__.py  budget.py  candidates.py  cli.py  config.py  cost.py  flash_burst.py  jobs.py  mcp_server.py  notify.py  pipeline.py  placement.py  quota.py  requests.py  safety.py  venvs.py  watcher.py
orchestrator/tests/: conftest.py  test_budget.py  test_candidates_watcher.py  test_cost.py  test_flash_burst.py  test_merge_proposal.py  test_pipeline.py  test_placement.py  test_quota.py  test_requests.py  test_safety.py  test_tenant.py
proxy/: go.mod  go.sum  main.go
proxy/cmd/: root.go  serve.go  summary.go  version.go
registry-service/: go.mod  main.go
registry-service/cmd/: root.go  serve.go  version.go
scripts/: demo-run.sh  video-narrate.sh
serving/: pyproject.toml
serving/contrib/: apprentice-vllm@.service
serving/src/apprentice_serving/: bench.py  cli.py  config_paths.py  control.py  logging.py  residency.py  server.py
serving/tests/: test_bench.py  test_control.py  test_residency.py  test_server.py
tasks/dataset-builder/: subtask_01.json  subtask_02.json  subtask_03.json  subtask_04.json  subtask_05.json  subtask_06.json  subtask_07.json  subtask_08.json  task.json
tasks/demo/: subtask_01.json  subtask_02.json  subtask_03.json  subtask_04.json  subtask_05.json  subtask_06.json  task.json
tasks/detector/: subtask_01.json  subtask_02.json  subtask_03.json  subtask_04.json  subtask_05.json  subtask_06.json  task.json
tasks/foundation/: subtask_01.json  subtask_02.json  subtask_03.json  subtask_04.json  task.json  (+3 more)
telegram/: pyproject.toml
telegram/scripts/: apprentice-telegram-dispatch.sh  apprentice-telegram-poll.sh
telegram/src/apprentice_telegram/: __init__.py  cli.py  outbox.py  reply_handler.py  templates.py
telegram/tests/: test_cli.py  test_outbox.py  test_reply_handler.py  test_templates.py
trainer/: README.md  pyproject.toml  supported_models.yaml
trainer/profiles/: profile_2080ti.yaml  profile_4060mobile.yaml  profile_a100.yaml
trainer/src/apprentice_trainer/: manifest_signer.py  manifest_writer.py  model_exporter.py  models.py  train.py
trainer/tests/: test_manifest_signer.py  test_manifest_writer.py  test_model_exporter.py  test_models.py  test_train.py
validator/: pyproject.toml
validator/src/apprentice_validator/: baseline_cli.py  baseline_io.py  baseline_runner.py  cli.py  failure_reporter.py  logging.py  metrics.py  promotion_gate.py  registry.py  registry_cli.py  skill_registrar.py  test_runner.py
validator/tests/: test_baseline_cli.py  test_baseline_io.py  test_cli_baseline_required.py  test_failure_reporter.py  test_merge_regression.py  test_metrics.py  test_promotion_gate.py  test_registry.py  test_registry_merge_lineage.py  test_skill_registrar.py  test_test_runner.py
(+153 files in other folders)
