[project]
name = "apprentice-setup"
version = "0.2.0"
description = "Apprentice installer: detect environment, collect settings, reproduce venvs, build Go binaries."
requires-python = ">=3.10,<3.15"

dependencies = []

[project.scripts]
apprentice-setup = "apprentice_setup.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apprentice_setup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
