[project]
name = "apprentice-serving"
version = "0.1.0"
description = "Apprentice serving: vLLM server launcher, OpenAI compat check, latency benchmark."
requires-python = ">=3.10,<3.15"

dependencies = [
    "httpx>=0.28",
]

[project.scripts]
apprentice-serve = "apprentice_serving.cli:main_serve"
apprentice-serve-control = "apprentice_serving.control:main"
apprentice-bench = "apprentice_serving.cli:main_bench"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apprentice_serving"]

[tool.pytest.ini_options]
testpaths = ["tests"]
